// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ProgressIndicator 1 of 3 1`] = `
<div
  className="ProgressIndicator"
>
  <label
    htmlFor="steps-indicator"
  >
    1
    /
    3
     Complete
  </label>
  <progress
    id="steps-indicator"
    max={3}
    value={1}
  >
    33.33333333333333
    %
  </progress>
</div>
`;

exports[`Storyshots ProgressIndicator 2 of 3 1`] = `
<div
  className="ProgressIndicator"
>
  <label
    htmlFor="steps-indicator"
  >
    2
    /
    3
     Complete
  </label>
  <progress
    id="steps-indicator"
    max={3}
    value={2}
  >
    66.66666666666666
    %
  </progress>
</div>
`;

exports[`Storyshots ProgressIndicator 3 of 3 1`] = `
<div
  className="ProgressIndicator"
>
  <label
    htmlFor="steps-indicator"
  >
    3
    /
    3
     Complete
  </label>
  <progress
    id="steps-indicator"
    max={3}
    value={3}
  >
    100
    %
  </progress>
</div>
`;

exports[`Storyshots ProgressIndicator default 1`] = `
<div
  className="ProgressIndicator"
>
  <label
    htmlFor="steps-indicator"
  >
    0
    /
    3
     Complete
  </label>
  <progress
    id="steps-indicator"
    max={3}
    value={0}
  >
    0
    %
  </progress>
</div>
`;
